--- a/Advance Wars/index.html
+++ b/Advance Wars/index.html
@@ -51,11 +51,11 @@
 		<script src="/js/Military/MilitaryWarShip.js"></script>
 		<script src="/js/State/boots.js"></script>
 		<script src="/js/State/chooseMapState.js"></script>
-
 		<script src="/js/State/load.js"></script>
 		<script src="/js/State/menu.js"></script>
 		<script src="/js/State/plays.js"></script>
 		<script src="/js/State/result.js"></script>
+		<script src="/js/State/zzzgames.js"></script>
 		<script src="/js/Terrain/TerrainBridge.js"></script>
 		<script src="/js/Terrain/TerrainCity.js"></script>
 		<script src="/js/Terrain/TerrainCityHabor.js"></script>
@@ -68,7 +68,6 @@
 		<script src="/js/Terrain/TerrainRoad.js"></script>
 		<script src="/js/Terrain/TerrainSeaShore.js"></script>
 		<script src="/js/Terrain/TerrainTree.js"></script>
-    	<script src="/js/State/games.js"></script>
 		<!-- endinject -->
   </head>
   <body>
